Fix broken css from card stack refactor

--- a/BlazarUI/app/stylus/components/repo-branch-card.styl
+++ b/BlazarUI/app/stylus/components/repo-branch-card.styl
@@ -162,13 +162,18 @@ $build-and-status-width = 80px
     font-family HelveticaNeue
 
 .repo-branch-card__author
-  font-size 14px
-  font-family HelveticaNeue
-  padding-left 20px
+  color #425b76
+  font-family HelveticaNeue-medium
 
 .repo-branch-card__module-rows
   margin-top 20px
   box-shadow 0 3px 3px 0 rgba(0, 0, 0, 0.2)
+
+.repo-branch-card__expanded-author
+  font-size 14px
+  color #2965a8
+  font-family HelveticaNeue
+  padding-left 20px
 
 .repo-branch-card__expanded-module-row
   background-color white
